✨新增(pages): 新增 store存储器

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -38,7 +38,7 @@ ol {
 input {
   padding-top: 0;
   padding-bottom: 0;
-  font-family: "SimSun", "宋体";
+  font-family: 'SimSun', '宋体';
 }
 
 select,
@@ -62,7 +62,7 @@ body {
 }
 
 .clearfix:after {
-  content: ".";
+  content: '.';
   display: block;
   height: 0;
   visibility: hidden;
