--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,5 @@
-@import "./base.less";
-@import "./mixins.less";
+@import './base.less';
+@import './mixins.less';
 
 .ant-layout-sider {
   height: 100vh;
