✨新增(package): 新增 readme 和 package json

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,8 @@
 @import './base.less';
 @import './mixins.less';
 
-.ant-layout-sider {
-  height: 100vh;
+
+:root {
+  --a-header-bg: transparent;
+  --a-menu-bg: transparent;
 }
